# data-quality-requirements-ml-systems

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/: 01_data_cleaning.ipynb  02_descriptive.ipynb  04a_multiple_choice.ipynb  utils.py
data/codebook/: Q10.xlsx  Q12.xlsx  Q14.xlsx  Q15.xlsx  codebook.md  codebook_pt.md  coded_responses.csv  coding_scheme.csv
data/processed/: anonymized.csv  likert_importance.csv  likert_priority.csv  open_responses.csv  skills.csv  words.csv
data/processed/tables/: spearman_imp_vs_pri.tex
data/raw/: full_quali.xlsx  parcial_quali.xlsx  survey_responses.xlsx  survey_responses_2.xlsx
notebooks/: 01_data_cleaning.ipynb  02_descriptive.ipynb  03_inferential.ipynb  03_qualitative.ipynb  04a_multiple_choice.ipynb  04b_qualitative.ipynb  05_robustness.ipynb  RQ1.ipynb  RQ2.ipynb  RQ3.ipynb  additional_analysis.ipynb  data_cleaning.ipynb  demographic_characterization.ipynb  top_mind.ipynb  utils.py
