[project]
name = "survey-analysis"
version = "0.1.0"
description = "Survey analysis: data quality requirements in ML systems"
requires-python = ">=3.12"
dependencies = [
  "ipykernel>=7.2.0",
  "jupyter>=1.0",
  "jupyterlab>=4.2",
  "matplotlib>=3.9",
  "nltk>=3.9",
  "numpy>=2.4.4",
  "openpyxl>=3.1",
  "pandas>=3.0.2",
  "scipy>=1.13",
  "seaborn>=0.13",
  "spacy>=3.7",
  "statsmodels>=0.14",
  "tabulate>=0.9",
  "wordcloud>=1.9",
]

[tool.uv]
package = false
